# icub-firmware-build

./: 2BLL.1.50.out.S  2BLL.1.51.out.S  2BLL.1.52.out.S  2BLL.1.53.out.S  2BLL.1.54.out.S  2BLL.1.57.out.S  2BLL.1.61.out.S  2BLL.iKart.out.S  2BLLDC.1.61.out.S  2BLLDC.1.62.out.S  2BLL_IE.2.50.out.S  2BLL_IE.2.51.out.S  2BLL_IE.2.52.out.S  2BLL_IE.2.54.out.S  2BLL_IE.2.57.out.S  2FOC-V20-GE04.hex  2FOC-V20.hex  2FOC-V3.enc.test.hex  2FOC-V3andV2-051217.hex  2FOC.hex  2FOC.v1.4.hex  2FOC.v1.5.hex  2FOC_GE04.hex  2FOC_old_six_step.hex  4DC.1.11.out.S  4DC.1.12.out.S  4DC.1.13.out.S  4DC.1.14.out.S  4DC.1.15.out.S  4DC.1.16.out.S  4DC.1.17.out.S  4DC.1.18.out.S  4DC.1.19.out.S  4DC.1.20.out.S  4DC.1.21.out.S  4DC.1.25.out.S  4DC.1.28.out.S  4DC.1.29.out.S  4DC.1.30.out.S  4DC.2.14.out.S  (+16 more)
EMS/: howto.txt  readme.txt
ETH/: FirmwareUpdater.readme.maintenance.of.eth.robots.txt  howto-eth-boards-fundamentals.txt  howto-eth-boards-programming.old.txt  howto-eth-boards-programming.txt  howto-eth-boards-simple-fw-update.txt  readme.txt
MC2PLUS/: readme.txt
MC4PLUS/: howto.txt  readme.txt
docs/: FirmwareUpdater.readme.fulldetails.txt  FirmwareUpdater.readme.maintenance.of.eth.robots.txt  FirmwareUpdater.readme.quick.txt  FirmwareUpdater.readme.scripts.txt  FirmwareUpdater.readme.strain.txt  howto-eth-boards-fundamentals.txt  placeholder.txt  readme.txt
info/: firmware.info.xml
logs/: log.of.FirmwareUpdater.tummesetup.program.all.txt
scripts/: FirmwareUpdater.script.info.all.sh  FirmwareUpdater.script.program.all.sh  FirmwareUpdater.script.redirect.sh.in  FirmwareUpdater.script.topology.all.sh  FirmwareUpdater.script.update.all.ems4.sh  FirmwareUpdater.script.update.all.foc-special.sh  FirmwareUpdater.script.update.all.foc.sh  FirmwareUpdater.script.update.all.mc4plus.sh  FirmwareUpdater.script.update.all.sh  FirmwareUpdater.script.update.face.sh  FirmwareUpdater.script.update.head.sh  FirmwareUpdater.script.update.left_arm.sh  FirmwareUpdater.script.update.left_leg.ems4.sh  FirmwareUpdater.script.update.left_leg.sh  FirmwareUpdater.script.update.right_arm.sh  FirmwareUpdater.script.update.right_leg.sh  FirmwareUpdater.script.update.torso.sh  FirmwareUpdater.script.verify.all.sh  FirmwareUpdater.script.verify.left_leg.ems4.sh  FirmwareUpdater.script.verify.left_leg.sh  boardsOf.xml  firmware.info.xml  manageFWrobot.old.py  manageFWrobot.py  manageFWrobot_parallel.py  network.iCubTemplate.xml  network.iCubTemplate.xml.bak  network.setupFU.xml  network.tummesetup.xml  propertiesOfBoards.xml  topology.iCubGenova01.xml  topology.iCubGenova02.xml  topology.iCubGenova04.xml  topology.iCubXXX.xml  updateRobot.py
testing/: 2BLL.1.50.out.S  2BLL.1.50_bcoeff.out.S  2BLL.1.50_coupling_nori.out.S  2BLL.1.50_filter_bcoeff.out.S  2BLL.1.50_fixed.out.S  2BLL.1.50_maggia.out.S  2BLL.1.50_prediction.out.S  2BLL.1.50_pwm40.out.S  2BLL.1.50_ratelimited_pwm40.out.S  2BLL.1.51.out.S  2BLL.1.51.out_boundPWM30.S  2BLL.1.51.out_dutycycledir.S  2BLL.1.51.out_signkp1.S  2BLL.1.51.out_signkp2.S  2BLL.1.51.out_signkp3.S  2BLL.1.51.out_signkp4.S  2BLL.1.51.out_signkp5.S  2BLL.1.51.out_signkp6.S  2BLL.1.57.out.S  (+125 more)
(+512 files in other folders)
